--- a/html-css)/task8/style.css
+++ b/html-css)/task8/style.css
@@ -12,7 +12,7 @@ body{
     margin: 0;
     padding: 0;
     height: 100px
-    
+    /* A: bu qeder boslugu ne edeceksen, Shamilcan? */
     
     
     
@@ -27,7 +27,7 @@ body{
     height: 50px;
     width: 260px;
     box-sizing: border-box;
-   
+   /* A: ay masallah! */
     
     
     
